--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ img{
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Source Sans Pro', Arial,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -282,6 +282,30 @@ button[type=submit]:hover {
   align-items: center;
   margin-top: 30px;
 }
+.selector {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: center;
+  border: 1px solid rgba(var(--tmdbDarkBlue), 1);
+  border-radius: 30px;
+  padding: 4px 20px;
+  font-size: 1em;
+  cursor: pointer;
+}
+.info-header {
+  text-align: center;
+  margin-top: 20px;
+}
+.active {
+  -webkit-text-fill-color:  #c0fecf;
+  -webkit-background-clip: text;
+  background: rgba(var(--tmdbDarkBlue), 1);
+  pointer-events: none;
+  transition: 1.2s;
+  cursor: pointer;
+}
+
 .consensus{
   width: 38px;
   height: 38px;
