--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,10 @@ footer {
     background-color: rgba( 3,37,65) ;
     padding: 60px 0;
     color: white;
+    margin-top: auto;
+    bottom: 0;
+    left: 0;
+    position: relative;
 }
 h2 {
     margin-bottom: 20px;
