--- a/src/index.css
+++ b/src/index.css
@@ -375,3 +375,161 @@ button[type=submit]:hover {
   50% { background-position: 400% 0; }
   100% { background-position: 0 0; }
 }
+/**************************************Media Queries*****************************************************/
+@media (max-width: 1440px) {
+  .container {
+    max-width: 1300px;
+  }
+  .burger {
+    display: none;
+  }
+
+}
+@media (max-width: 1300px) {
+  .container {
+    max-width: 993px;
+  }
+  .burger {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 772px;
+  }
+  .item-col{
+    width: 50%;
+    margin-bottom: 10px;
+  }
+  .element-col{
+    width: 50%;
+    margin-bottom: 10px;
+  }
+  .home-title{
+    font-size: 32px;
+    margin-bottom: 10px;
+  }
+  .home-subtitle {
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+  input[type=text] {
+    padding: 7px 14px;
+    height: 35px;
+    font-size: 14px;
+}
+  button[type=submit]{
+    padding: 7px 14px;
+    height: 35px;
+    font-size: 14px;
+  }
+  .films-title {
+    font-size: 18px;
+    margin: 0 10px 0 10px;
+  }
+
+
+
+
+
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 540px;
+    align-items: center;
+  }
+  .item-col,.element-col{
+    width: 50%;
+    padding: 0 5px;
+  }
+  .menu {
+    background: #23180d;
+    background-blend-mode: luminosity;
+    mix-blend-mode: normal;
+    border-radius: 10px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    z-index: 4;
+  }
+
+  .burger {
+    z-index: 5;
+    display: flex;
+    position: fixed;
+    right: 50px;
+    top: 50px;
+  }
+
+  .menu.show {
+    left: 0;
+  }
+  img {
+    max-width: 100%;
+  }
+
+  .menu-show {
+    position: fixed;
+    right: 0;
+    top: 20px;
+  }
+  .logo {
+    width: 290px;
+  }
+  .item-col,.element-col {
+    width: 100%;
+  }
+  .item-col img {
+    width: 100%;
+  }
+  .side-bar {
+    display: flex;
+    align-items: center;
+  }
+  .row{ text-align: center}
+  .menu a {
+    margin: 20px 0;
+  }
+  .col-3 {
+    width: 100%;
+  }
+  .col-8 {
+    width: 100%;
+  }
+
+
+
+}
+@media (max-width: 540px) {
+  .container {
+    max-width: 320px;
+  }
+  .row {
+    align-items: center;
+  }
+  .col-8,.col-3,.col-7,.col-4,.col-6{
+    width: 100%;
+  }
+  .col-4,.item-col{
+    width: 100%;
+    padding: 0 5px;
+    text-align:center;
+  }
+  .logo {
+    width: 230px;
+  }
+  img{
+    width: 100%;
+  }
+  .homepage-title{
+    width: 100%;
+
+  }
+}
