--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-    overflow: hiden;
+    overflow: hidden;
     background-color: rgba( 3,37,65);
     padding: 30px 0;
 }
@@ -13,10 +13,11 @@ header {
 
 }
 .menu {
-    margin-left: 30px;
+    margin-left: 0;
 }
 .menu a {
     color: white;
     margin-right: 15px;
-    font-size: 18px;
+    font-size: 14px;
+    cursor: pointer;
 }
